<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_registro"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_letra"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img_empresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/descr_empresa"
                android:layout_alignParentTop="true"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="" />

            <TextView
                android:id="@+id/tv_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_usuario"
                android:layout_marginTop="32dp"
                android:text="@string/proyecto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/sp_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_proyecto"
                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/tv_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sp_proyecto"
                android:layout_marginTop="32dp"
                android:text="@string/cliente"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/sp_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_cliente"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/tv_numhoras"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sp_cliente"
                android:layout_marginTop="20dp"
                android:text="@string/numHorasEnCapturar"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/btn_fecha"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@mipmap/btn_guardar"
                android:elevation="14dp"
                android:textColor="@color/azul_letra"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_horas"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:lines="1"
                android:maxLength="2"
                android:maxLines="1"
                android:textColor="@color/azul_letra"
                android:textSize="30sp"
                android:layout_alignTop="@+id/tv_numhoras"
                android:layout_alignParentEnd="true"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btn_fecha"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/btn_calendario"
                android:layout_alignTop="@+id/tv_fechaelab"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formatoFecha"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="23sp"
                android:layout_above="@+id/btn_guardar"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tv_fechaelab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/fechaSel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/et_horas"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>


