<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scaleType = "centerInside">

    <!-- Sistema Integral de Control de Tiempos-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".SplashActivity">

            <TextView
                android:id="@+id/tv_mensajeinicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sigamensaje"
                android:textColor="#002445"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_usr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mensajeinicial"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:text="@string/login_usuario"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textSize="23sp"
                android:typeface="normal" />

            <EditText
                android:id="@+id/et_usr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_usr"
                android:layout_centerHorizontal="true"
                android:width="200dp"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/azul_letra"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_below="@+id/et_pass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@mipmap/btn_entrar" />

            <TextView
                android:id="@+id/tv_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_usr"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/login_pass"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pass"
                android:layout_centerHorizontal="true"
                android:width="200dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/azul_letra"
                android:textSize="20sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>

<!-- ?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_login"
    android:orientation="vertical">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SplashActivity">

        <TextView
            android:id="@+id/tv_mensajeinicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sigamensaje"
            android:textColor="#002445"
            android:layout_marginTop="90dp"
            android:textSize="30sp" / -->

        <!-- Sistema Integral de Control de Tiempos-->

        <!-- TextView
            android:id="@+id/tv_usr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mensajeinicial"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login_usuario"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray"
            android:textSize="23sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/et_usr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_usr"
            android:layout_centerHorizontal="true"
            android:width="200dp"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/azul_letra"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_below="@+id/et_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@mipmap/btn_entrar" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_usr"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login_pass"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="47dp"
            android:width="200dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/azul_letra"
            android:textSize="30sp" />
    </RelativeLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout -->